# quantlab

./: .gitattributes  .gitignore  README.md  pyproject.toml
applications/asx_intel/: .env.example  .gitignore  README.md  requirements.txt
applications/asx_intel/backend/: database.py  main.py  models.py  schemas.py
applications/asx_intel/backend/api/: announcements.py  companies.py  reports.py  sectors.py
applications/asx_intel/backend/ingestion/: announcement_ingestor.py  asx_client.py  mock_data.py  pdf_parser.py
applications/asx_intel/backend/market/: price_fetcher.py
applications/asx_intel/backend/processing/: classifier.py  importance_scorer.py  llm_client.py  summariser.py
applications/asx_intel/frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
applications/asx_intel/frontend/app/: globals.css  layout.tsx  page.tsx
applications/asx_intel/frontend/components/: AnnouncementRow.tsx  AnnouncementTypeBadge.tsx  DashboardClient.tsx  ImportanceBadge.tsx  (+4 more)
applications/asx_intel/scripts/: backfill.py  run_daily_ingestion.py  scheduler.py  setup_autostart.bat
applications/clanka_trade/: diagnostics.json  diagnostics.py  main.py
applications/first_app/: README.md
applications/gf-morning-app/: .gitignore  README.md  __init__.py  package-lock.json  package.json  tailwind.config.ts  vercel.json
applications/gf-morning-app/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
applications/gf-morning-app/components/: CalendarCard.tsx  ChoreCountdown.tsx  CommutePlanner.tsx  Dashboard.tsx  ExcelFunctionCard.tsx  FerrySchedule.tsx  FunFactCard.tsx  GymTracker.tsx  Header.tsx  LastDate.tsx  LifeAdmin.tsx  NewsCard.tsx  PinGate.tsx  QuizCard.tsx  QuoteCard.tsx  Schedule.tsx  ShortcutQuiz.tsx  SnoozeTracker.tsx  TaffyRating.tsx  TermsPage.tsx  TransportCard.tsx  WeatherCard.tsx
applications/gf-morning-app/lib/: formatDate.ts  greetingService.ts  quoteService.ts  scheduleService.ts  storage.ts  supabase.ts  transportService.ts  weatherService.ts
applications/gf-morning-app/public/: manifest.json
applications/gf-morning-app/supabase/: create_taffy_ratings.sql
applications/gf-morning-app/types/: index.ts
docs/: architecture.md
src/quant_core/: __init__.py
src/quant_core/data/: __init__.py
src/quant_core/features/: __init__.py
src/quant_core/models/: __init__.py
src/quant_core/portfolio/: __init__.py
src/quant_core/risk/: __init__.py
src/quant_core/utils/: __init__.py  config.py  logging.py
tests/unit/: test_quant_core.py
(+8 files in other folders)
