[project]
name = "quantlab"
version = "0.1.0"
description = "Professional quantitative research and systematic trading platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # --- Core scientific stack ---
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",

    # --- Data acquisition ---
    "yfinance>=0.2",
    "requests>=2.32",
    "httpx>=0.27",

    # --- Configuration ---
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",

    # --- Utilities ---
    "rich>=13.7",
    "loguru>=0.7",
    "tqdm>=4.66",
    "typer>=0.12",
]

[project.optional-dependencies]
quant = [
    # Quantitative finance
    "statsmodels>=0.14",
    "arch>=7.0",           # ARCH/GARCH models
    "pyportfolioopt>=1.5", # Portfolio optimisation
    "quantstats>=0.0.62",  # Performance tearsheets + risk/return metrics
]

ml = [
    # Machine learning
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "shap>=0.45",          # Model explainability
]

backtest = [
    # Backtesting
    "vectorbt>=0.26",      # Vectorised backtesting
    "zipline-reloaded>=3.0",
]

viz = [
    # Visualisation
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
    "dash>=2.17",          # Interactive dashboards
]

research = [
    # Notebook & research tools
    "jupyterlab>=4.2",
    "ipywidgets>=8.1",
    "nbformat>=5.10",
]

dev = [
    # Development tools
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipython>=8.25",
]

all = [
    "quantlab[quant,ml,backtest,viz,research,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_core"]

# =============================================================================
# Tool configuration
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]
